<resources>
    <string name="app_name">Acorn</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Menu Items -->

    <string name="earn">Earn</string>
    <string name="points">Points</string>
    <string name="scan">Scan</string>
    <string name="community">Social</string>
    <string name="profile">Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_title">Title</string>
    <string name="prompt_time">Time and Date</string>
    <string name="prompt_place">Place</string>
    <string name="prompt_description">Description</string>
    <string name="action_create">Create Event</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Errors -->
    <string name="network_error">No network connection available</string>
    <!-- Login Screen -->
    <string name="email_name_field">Username</string>
    <string name="password_field">Password</string>
    <string name="login">Login</string>
    <string name="register"><u>Sign Up For Acorn</u></string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="error_text">Invalid Username/Password Combination</string>

    <!-- Register account -->
    <string name="create_account"><u>Account Creation</u></string>
    <string name="username_field">Username </string>
    <string name="email_field">Email </string>
    <string name="submit_password_field">Password </string>
    <string name="confirm_password">Confirm Password </string>
    <string name="register_button">Register</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_password_confirm">Passwords do not match</string>
    <string name="register_error">Register failed</string>

    <!-- Earn -->
    <string name="earn_rewards_title">Rewards</string>
    <string name="earn_rewards_subtitle">Find more shops to shop sustainably</string>
    <string name="earn_tasks_title">Individual Tasks</string>
    <string name="earn_tasks_subtitle">What can you do to prevent pollution?</string>
    <string name="earn_check1">Turned off water while brushing teeth</string>
    <string name="earn_check2">Bought local produce</string>
    <string name="earn_check3">Used public transit today</string>
    <string name="earn_check4">Filled a reusable water bottle</string>

    <!-- Points -->
    <string name="points_to_redeem">100 points</string>
    <string name="points_instruction">available to redeem</string>
    <string name="points_redeem">REDEEM</string>

    <!-- Scanning -->
    <string name="scanning_instruction_title">See an Acorn Marker?</string>
    <string name="scanning_instruction_subtitle">Scan NFC tag by placing your phone against it</string>
    <string name="scanning_success_title">Scan Successful!</string>
    <string name="scanning_success_subtitle">3 points added!</string>

    <!-- Learn -->
    <string name="learn_title1">11 easy ways to reduce your plastic waste today</string>
    <string name="learn_content1">This web page explores 11 different ways you can reduce your environmental footprint. It will help...</string>
    <string name="learn_title2">Five ways to end food waste</string>
    <string name="learn_content2">This fact sheet will help you sharpen your food storage skills so you can save both food and money. Even after being pulled out of the earth or off of a vine, fruits and vegetables are still breathing and ripening, so knowing how to properly store them can save your food from going bad and becoming waste.</string>

</resources>
