<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:padding="50dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_field"
            android:inputType="textPersonName"
            android:maxLines="1"
            style="@android:style/Widget.Holo.Light.EditText" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/submit_password_field"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/password_confirm_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/error_text"
            android:textColor="@color/error_red"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:onClick="onRegister"
            android:text="@string/register_button"/>
        <ProgressBar
            android:id="@+id/loading_icon"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyle"
            android:padding="5dp"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>